shortening singleton lists