@@ -3,7 +3,6 @@ package cz.fb.manaus.core.category.categorizer;
 import cz.fb.manaus.core.model.Market;
 import org.springframework.stereotype.Component;
 
-import java.util.Collections;
 import java.util.Set;
 
 @Component
@@ -15,6 +14,6 @@ final public class BspMarketCategorizer extends AbstractDelegatingCategorizer {
 
     @Override
     public Set<String> getCategoryRaw(Market market) {
-        return Collections.singleton(Boolean.toString(market.isBspMarket()));
+        return Set.of(Boolean.toString(market.isBspMarket()));
     }
 }
