@@ -3,10 +3,7 @@ package cz.fb.manaus.core.category.categorizer;
 import cz.fb.manaus.core.model.Market;
 import org.springframework.stereotype.Component;
 
-import java.util.Collections;
 import java.util.Set;
-
-import static java.util.Collections.singleton;
 
 @Component
 final public class CountryCodeCategorizer extends AbstractDelegatingCategorizer {
@@ -21,8 +18,8 @@ final public class CountryCodeCategorizer extends AbstractDelegatingCategorizer 
     protected Set<String> getCategoryRaw(Market market) {
         String countryCode = market.getEvent().getCountryCode();
         if (countryCode == null) {
-            return Collections.singleton("none");
+            return Set.of("none");
         }
-        return singleton(countryCode.toLowerCase());
+        return Set.of(countryCode.toLowerCase());
     }
 }
