@@ -4,7 +4,6 @@ import cz.fb.manaus.core.model.Market;
 import cz.fb.manaus.core.model.Runner;
 import org.springframework.stereotype.Component;
 
-import java.util.Collections;
 import java.util.Set;
 
 @Component
@@ -19,6 +18,6 @@ final public class RunnerCountCategorizer extends AbstractDelegatingCategorizer 
     @Override
     public Set<String> getCategoryRaw(Market market) {
         long size = market.getRunners().stream().mapToLong(Runner::getSelectionId).distinct().count();
-        return Collections.singleton(Long.toString(size));
+        return Set.of(Long.toString(size));
     }
 }
