@@ -4,7 +4,6 @@ import cz.fb.manaus.core.category.BetCoverage;
 import cz.fb.manaus.core.model.SettledBet;
 import org.springframework.stereotype.Component;
 
-import java.util.Collections;
 import java.util.Set;
 
 @Component
@@ -13,7 +12,7 @@ public class SideCategorizer implements SettledBetCategorizer {
     @Override
     public Set<String> getCategories(SettledBet settledBet, BetCoverage coverage) {
         String side = settledBet.getPrice().getSide().name().toLowerCase();
-        return Collections.singleton("side_" + side);
+        return Set.of("side_" + side);
     }
 
 }
