@@ -3,10 +3,7 @@ package cz.fb.manaus.core.category.categorizer;
 import cz.fb.manaus.core.model.Market;
 import org.springframework.stereotype.Component;
 
-import java.util.Collections;
 import java.util.Set;
-
-import static java.util.Collections.singleton;
 
 @Component
 final public class TypeCategorizer extends AbstractDelegatingCategorizer {
@@ -22,9 +19,9 @@ final public class TypeCategorizer extends AbstractDelegatingCategorizer {
     public Set<String> getCategoryRaw(Market market) {
         String type = market.getType();
         if (type == null) {
-            return Collections.singleton("unknown");
+            return Set.of("unknown");
         }
-        return singleton(type.toLowerCase());
+        return Set.of(type.toLowerCase());
 
     }
 }
