@@ -4,7 +4,6 @@ import cz.fb.manaus.core.category.BetCoverage;
 import cz.fb.manaus.core.category.categorizer.SettledBetCategorizer;
 import cz.fb.manaus.core.model.SettledBet;
 
-import java.util.Collections;
 import java.util.Set;
 
 abstract public class AbstractCountCategorizer implements SettledBetCategorizer {
@@ -25,7 +24,7 @@ abstract public class AbstractCountCategorizer implements SettledBetCategorizer 
     @Override
     public Set<String> getCategories(SettledBet settledBet, BetCoverage coverage) {
         int count = getCount(settledBet);
-        return Collections.singleton(prefix + toCategory(count));
+        return Set.of(prefix + toCategory(count));
     }
 
     protected abstract int getCount(SettledBet bet);
