@@ -9,7 +9,7 @@ import org.hamcrest.CoreMatchers;
 import org.junit.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 
-import java.util.Collections;
+import java.util.Set;
 
 import static org.junit.Assert.assertThat;
 
@@ -21,7 +21,7 @@ public class AllCategorizerTest extends AbstractLocalTestCase {
     @Test
     public void testCategory() throws Exception {
         assertThat(categorizer.getCategories(CoreTestFactory.newSettledBet(2d, Side.LAY), BetCoverage.EMPTY),
-                CoreMatchers.is(Collections.singleton(MarketCategories.ALL)));
+                CoreMatchers.is(Set.of(MarketCategories.ALL)));
     }
 
 }
