@@ -8,7 +8,7 @@ import org.hamcrest.CoreMatchers;
 import org.junit.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 
-import java.util.Collections;
+import java.util.Set;
 
 import static org.hamcrest.core.Is.is;
 import static org.junit.Assert.assertThat;
@@ -39,7 +39,7 @@ public class FairnessCategorizerTest extends AbstractLocalTestCase {
     @Test
     public void testCategory() throws Exception {
         assertThat(categorizer.getCategories(CoreTestFactory.newSettledBet(2d, Side.LAY), BetCoverage.EMPTY),
-                CoreMatchers.is(Collections.singleton("fairness_0.75-0.80")));
+                CoreMatchers.is(Set.of("fairness_0.75-0.80")));
     }
 
 }
