@@ -7,7 +7,7 @@ import cz.fb.manaus.core.test.CoreTestFactory;
 import org.junit.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 
-import java.util.Collections;
+import java.util.Set;
 
 import static org.hamcrest.CoreMatchers.is;
 import static org.junit.Assert.assertThat;
@@ -20,7 +20,7 @@ public class ReciprocalCategorizerTest extends AbstractLocalTestCase {
     @Test
     public void testCategory() throws Exception {
         assertThat(categorizer.getCategories(CoreTestFactory.newSettledBet(2d, Side.LAY), BetCoverage.EMPTY),
-                is(Collections.singleton("reciprocal_0.80-0.85")));
+                is(Set.of("reciprocal_0.80-0.85")));
     }
 
 }
